--- a/shabuPage/package.json
+++ b/shabuPage/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "express": "^5.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
